<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.kennysong.gmaps.EditPg">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp">

        <ToggleButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="@string/MButton"
            android:id="@+id/MButton" />

        <ToggleButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="@string/TuButton"
            android:id="@+id/TuButton" />

        <ToggleButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="@string/WButton"
            android:id="@+id/WButton" />

        <ToggleButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="@string/ThButton"
            android:id="@+id/ThButton" />
        <ToggleButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="@string/FButton"
            android:id="@+id/FButton" />
        <ToggleButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="@string/SatButton"
            android:id="@+id/SatButton" />
        <ToggleButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="@string/SunButton"
            android:id="@+id/SunButton" />
    </LinearLayout>
</RelativeLayout>
