<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#3f37"
    tools:context="com.kennysong.gmaps.MenuActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:layout_above="@+id/calendarView"
        android:layout_centerHorizontal="true">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PrevDay"
            android:id="@+id/PrevDay"
            android:layout_gravity="center_vertical" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Today"
            android:id="@+id/Today"
            android:layout_gravity="center_vertical" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NxtDay"
            android:id="@+id/NxtDay"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EditButton"
        android:id="@+id/EditButton"
        android:layout_above="@+id/linearLayout"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <CalendarView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:id="@+id/calendarView"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
